--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "airedactx-extension",
-  "version": "1.0.0",
+  "version": "1.3.0",
   "description": "A browser extension for content modification and automation",
   "type": "module",
   "scripts": {
@@ -13,14 +13,15 @@
     "content-modification",
     "automation"
   ],
-  "author": "",
-  "license": "ISC",
+  "author": "filipvalica",
+  "license": "MIT",
   "dependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "webextension-polyfill": "^0.12.0"
   },
   "devDependencies": {
+    "@types/node": "^24.6.1",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@types/webextension-polyfill": "^0.12.3",
