Fix: Resolve file import failure by migrating UI to options page
The file import functionality was failing silently in the Firefox extension popup. This was caused by a security feature in Firefox that prevents an input's `onChange` event from firing within a sandboxed popup iframe.

This commit resolves the issue by changing the core UI from a popup to an options page, which runs in a full browser tab with the necessary permissions.

- Replaced `action.default_popup` with `options_ui` in the manifest.
- Added a `browser.action.onClicked` listener to the background script to open the options page.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "build:firefox": "tsc && cross-env BROWSER=firefox vite build",
+    "build:chrome": "tsc && cross-env BROWSER=chrome vite build",
     "preview": "vite preview"
   },
   "keywords": [
@@ -26,6 +28,7 @@
     "@types/react-dom": "^19.1.9",
     "@types/webextension-polyfill": "^0.12.3",
     "@vitejs/plugin-react": "^5.0.4",
+    "cross-env": "^10.1.0",
     "typescript": "^5.9.2",
     "vite": "^7.1.7"
   }
