--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "webextension-polyfill": "^0.12.0"
   },
   "devDependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
     "@types/node": "^24.6.1",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
