This commit completes the core functionality for Phase 2, introducing the redaction engine and the on-page user interface. The content script has been significantly refactored to ensure compatibility with modern, dynamic web applications.
Key Features & Fixes:

    Adds the core redaction engine (engine.ts) with support for literal and regex rules, execution priority, and persistent PII numbering.

    Implements the on-page UI injector (ui-injector.ts) to display the "Redact" button within active text fields.

    Refactors the content script (injector.ts) to robustly handle dynamically generated content and Shadow DOMs found on modern web apps like ChatGPT and Google.

    Adds a process to the background script to set default redaction rules on first installation for an improved user experience.

    Updates browser manifests to allow the content script to run in iframes, ensuring broader site compatibility.

    Aligns AppSettings types, default values, and the settings UI to include the 'replaceTextUsing' delimiter style, resolving previous type errors.

--- a/public/manifest.firefox.json
+++ b/public/manifest.firefox.json
@@ -1,40 +1,41 @@
 {
-    "manifest_version": 3,
-    "name": "AIRedactX Redaction Extension",
-    "version": "1.3.0",
-    "description": "Automatically redact sensitive information from text fields before submission.",
-    "permissions": [
-      "storage",
-      "activeTab",
-      "scripting",
-      "contextMenus"
-    ],
-    "host_permissions": [
-      "<all_urls>"
-    ],
-    "background": {
-      "scripts": ["background.js"],
-      "type": "module"
-    },
-    "content_scripts": [
-      {
-        "matches": ["<all_urls>"],
-        "js": ["content.js"]
-      }
-    ],
-    "action": {
-      "default_title": "AIRedactX - Click to open settings"
-    },
-    "options_ui": {
-      "page": "index.html",
-      "open_in_tab": true
-    },
-    "icons": {
-      "48": "icons/icon-48.png"
-    },
-    "browser_specific_settings": {
-      "gecko": {
-        "id": "airedactx@example.com"
-      }
+  "manifest_version": 3,
+  "name": "AIRedactX Redaction Extension",
+  "version": "1.3.0",
+  "description": "Automatically redact sensitive information from text fields before submission.",
+  "permissions": [
+    "storage",
+    "activeTab",
+    "scripting",
+    "contextMenus"
+  ],
+  "host_permissions": [
+    "<all_urls>"
+  ],
+  "background": {
+    "scripts": ["background.js"],
+    "type": "module"
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["content.js"],
+      "all_frames": true
+    }
+  ],
+  "action": {
+    "default_title": "AIRedactX - Click to open settings"
+  },
+  "options_ui": {
+    "page": "index.html",
+    "open_in_tab": true
+  },
+  "icons": {
+    "48": "icons/icon-48.png"
+  },
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "airedactx@example.com"
     }
   }
+}
