build: Overhaul Vite config for robust extension builds
Refactors the build process to use separate, dedicated Vite configurations for the UI (popup), background script, and content script.

This resolves persistent Rollup and Vite build errors related to using multiple `iife` entry points, specifically the "inlineDynamicImports" and "Multiple entry points are not supported" errors. The new multi-config approach creates a stable and reliable build process for both Firefox and Chrome by isolating each build task.
- Add `vite.background.config.ts` and `vite.content.config.ts`.
- Simplify the main `vite.config.ts` to only handle the UI build and static file copying.
- Update `package.json` scripts to orchestrate the new multi-step build process.

fix: Correct redaction logic and context menu behavior

This commit addresses several core functional bugs:
1.  Fixes a bug in the redaction engine (`core/engine.ts`) where end delimiters were incorrectly calculated using `substring`, resulting in truncated placeholders (e.g., "[[SSN 1.."). The logic now correctly uses `slice(-2)`.
2.  Removes the "handshake" protocol between the background and content scripts. This resolves a critical issue where the right-click context menu would only work once per page load. The logic is now a more reliable inject-then-send pattern.
3.  Improves active element detection in the content script to correctly identify focused elements within a Shadow DOM. This fixes context-menu redaction for complex web components (Level 8).

feat: Implement SVG icon and refine hover button UI

Implements several UI and UX improvements:
1.  Adds a new SVG icon for the extension. Updates all manifest files (`manifest.firefox.json`, `manifest.chrome.json`) and the Vite build configuration to use the new icon, making it visible in the browser toolbar and context menus.
2.  Refactors the hover button injection logic (`ui-injector.ts`) to be non-invasive. The previous "wrapper" method, which reparented DOM elements,

--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
-    "build:firefox": "tsc && cross-env BROWSER=firefox vite build",
-    "build:chrome": "tsc && cross-env BROWSER=chrome vite build",
+    "prebuild": "rimraf dist",
+    "build:ui": "vite build --config vite.config.ts",
+    "build:background": "vite build --config vite.background.config.ts",
+    "build:content": "vite build --config vite.content.config.ts",
+    "build": "npm run build:ui && npm run build:background && npm run build:content",
+    "build:firefox": "cross-env BROWSER=firefox npm run build",
+    "build:chrome": "cross-env BROWSER=chrome npm run build",
     "preview": "vite preview"
   },
   "keywords": [
@@ -31,6 +35,7 @@
     "@types/webextension-polyfill": "^0.12.3",
     "@vitejs/plugin-react": "^5.0.4",
     "cross-env": "^10.1.0",
+    "rimraf": "^5.0.5",
     "typescript": "^5.9.2",
     "vite": "^7.1.7"
   }
