fix(content): Finalize hover button and add full Shadow DOM support
This commit resolves all outstanding bugs related to the "Use Anywhere" hover button and Shadow DOM compatibility, making the extension fully functional across all test cases.

The primary issue was a silent failure of the content script's automatic injection, which was traced back to a build process error.

Key Changes:

- **Build Process:** Corrected the Vite build process to properly copy the `injected-styles.css` file to the output directory. Updated the manifest files to use the correct path, which resolved the critical bug preventing the content script from loading automatically.

- **Shadow DOM Support:**
    - Implemented a robust, iterative `getActiveElement` function to correctly traverse `shadowRoot` boundaries and find the deeply focused editable element. This fixed redaction for both the context menu and the hover button on web components.
    - The `handleRedaction` function now injects the extension's stylesheet directly into an active `shadowRoot`, ensuring consistent styling (e.g., the yellow highlight) on encapsulated components.

- **Reliability:** Refined event handling for `focusin` and `focusout` to ensure the hover button appears reliably and its click action is consistently tied to the correct active element.

--- a/public/manifest.chrome.json
+++ b/public/manifest.chrome.json
@@ -29,7 +29,7 @@
     {
       "resources": [
         "content.js",
-        "src/content/injected-styles.css"
+        "injected-styles.css"
       ],
       "matches": [
         "<all_urls>"
@@ -41,9 +41,13 @@
       "matches": [
         "<all_urls>"
       ],
+      "js": [
+        "content.js"
+      ],
       "css": [
-        "src/content/injected-styles.css"
-      ]
+        "injected-styles.css"
+      ],
+      "all_frames": true
     }
   ]
 }
