--- a/public/manifest.firefox.json
+++ b/public/manifest.firefox.json
@@ -35,7 +35,8 @@
   "web_accessible_resources": [
     {
       "resources": [
-        "content.js"
+        "content.js",
+        "injected-styles.css" 
       ],
       "matches": [
         "<all_urls>"
@@ -47,9 +48,13 @@
       "matches": [
         "<all_urls>"
       ],
+      "js": [
+        "content.js"
+      ],
       "css": [
-        "src/content/injected-styles.css"
-      ]
+        "injected-styles.css"
+      ],
+      "all_frames": true
     }
   ]
 }
