feat(data): Migrate rule management from CSV to TSV
BREAKING CHANGE: The import/export format for redaction rules has been changed from CSV to TSV.

- Updates `App.tsx` to handle TSV parsing and exporting.
- Redefines the data header to `type, find, replace, Active, Note`.
- Introduces a `divider` rule type for visual grouping in the UI. The divider's title is stored in the `note` field.
- Adds an optional `note` field to the `RedactionRule` type in `types.ts`. Notes are truncated at 255 characters on import.
- Implements enhanced import logic with "Replace All" and "Merge and Update" options. Duplicates are identified by the `find` field and are overwritten on merge.
```

```
feat(settings): Add reset to default functionality

- Implements "Reset Rules to Default" and "Reset Settings to Default" buttons in the `Settings.tsx` component.
- Adds `loadMasterRules` function to `storageManager.ts` to parse the master `airedactx_rules.tsv` file included in the build.
- Updates the build process in `vite.config.ts` to copy `airedactx_rules.tsv` to the output directory.
- Adds confirmation dialogs for both reset actions to prevent accidental data loss.
- Updates the background script to call `loadMasterRules` on first installation.
```

```
refactor(ui): Implement new style guide and redesign components

- Updates `index.css` with the new design system, including a new orange accent color, updated typography, and modern component styles.
- Redesigns the rule list in `RuleList.tsx` to include colored tags for `Literal`, `Regex`, and `Divider` types.
- Implements collapsible functionality for divider rows, including rule counts and expand/collapse state management in `App.tsx`.
- Styles all buttons, inputs, and toggles according to the new style guide.
- Introduces zebra-striping to the rule table for improved readability.
```

```
fix(ui): Correct divider layout and note icon placement

- Refactors the `DraggableTableRow` component in `RuleList.tsx` to correctly render divid

--- a/public/manifest.firefox.json
+++ b/public/manifest.firefox.json
@@ -36,7 +36,8 @@
     {
       "resources": [
         "content.js",
-        "injected-styles.css" 
+        "injected-styles.css",
+        "icons/icon-48.svg"
       ],
       "matches": [
         "<all_urls>"
