--- a/public/manifest.chrome.json
+++ b/public/manifest.chrome.json
@@ -29,7 +29,8 @@
     {
       "resources": [
         "content.js",
-        "injected-styles.css"
+        "injected-styles.css",
+        "icons/icon-48.svg"
       ],
       "matches": [
         "<all_urls>"
